Bugfixes and updates:
- Add padding to Settings scroll element
- Fix address view on Account settings
- Fix alert overlap with address data

--- a/src/desktop/src/ui/views/account/addresses.scss
+++ b/src/desktop/src/ui/views/account/addresses.scss
@@ -6,6 +6,7 @@
 
     p {
         font-size: 14px;
+        word-break: break-word;
     }
 
     li {
